update task no longer stores tmp records in db